Added my name to internship report

--- a/First Semester/Internship/Internship Report/report.tex
+++ b/First Semester/Internship/Internship Report/report.tex
@@ -103,12 +103,16 @@
     %--------------------------SUBTITLE --------------------------	
 
     \LARGE\textsc{
-        Submitted By
+        Submitted By\\
     } % Subtitle or further description
 
+    \Large{
+        \textbf{Krishnaraj Thadesar}\\
+        \textbf{1032210888}
+    }
     %--------------------------AUTHOR-------------------------------
 
-    \vspace{0.5\baselineskip} % Whitespace below the editor list
+    \vspace{0.9\baselineskip} % Whitespace below the editor list
     Under the Supervision of\\
     \Large{
         \textbf{Mr. Harekishan Shivnani}\\
