made some progress on assignment 1

--- a/Second Semester/Attack Reporting Documentation/Labs/Assignment_1/assignment_1.tex
+++ b/Second Semester/Attack Reporting Documentation/Labs/Assignment_1/assignment_1.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article}
+code \documentclass[11pt]{article}
 
 \usepackage[margin=1in]{geometry}
 \usepackage{amsfonts, amsmath, amssymb}
